[workspace]
members = [
    "orchestrator",
    "archive_engine",
    "abyss_gui"
]
resolver = "2"

# Single source of truth for metadata shared by every crate in the workspace.
# Member crates opt in with `version.workspace = true`, etc.
[workspace.package]
version = "0.5.0"
edition = "2024"
authors = ["4G0NYY"]
