[package]
name = "abyss_gui"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
archive_engine = { path = "../archive_engine" }
# Pure-Rust, GPU-rendered GUI (no webview). 0.13 = the established functional API.
# "tokio" gives us `time::every` + the runtime for the startup update check;
# "image" lets the window decode the .ico for its title-bar/taskbar icon.
iced = { version = "0.13", features = ["tokio", "image"] }
# Native OS file/folder dialogs (no webview).
rfd = "0.15"
# Lightweight blocking HTTP (rustls + bundled roots) for the GitHub update check.
ureq = { version = "2", features = ["json"] }
serde_json = "1"
# Just `spawn_blocking`, to run the blocking update check off the UI thread.
tokio = { version = "1", features = ["rt"] }

# Embeds the .ico into abyssc-gui.exe at build time.
[build-dependencies]
winresource = "0.1"

# A windowed app, not a console one. `abyssc-gui` is the user-facing name.
[[bin]]
name = "abyssc-gui"
path = "src/main.rs"
