[package]
name = "archive_engine"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Multi-file archive container with classic DEFLATE
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
# Streaming tar container for bundling files/directories ahead of a codec
tar = "0.4"

# --- Compression codecs ---
# gzip / DEFLATE (pure Rust)
flate2 = "1"
# Zstandard: the speed/ratio sweet spot, with multithreaded encoding
zstd = { version = "0.13", features = ["zstdmt"] }
# LZ4: fastest throughput. Drop the "safe" features for the faster unsafe code path.
lz4_flex = { version = "0.11", default-features = false, features = ["frame", "std"] }
# xz / LZMA: high ratio
xz2 = "0.1"
# bzip2: common legacy format
bzip2 = "0.4"
# brotli: web-standard codec (pure Rust)
brotli = "7"

# --- Encryption for sealed .abyss archives (pure Rust, audited primitives) ---
# AEAD stream cipher: fast in software, no AES hardware required.
chacha20poly1305 = { version = "0.10", features = ["stream"] }
# Memory-hard password-based key derivation.
argon2 = "0.5"
# OS randomness for per-archive salts and nonces.
rand = "0.8"
# Wipe derived keys from memory on drop.
zeroize = "1"
