[package]
name = "archive_engine"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Multi-file archive container with classic DEFLATE
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
# Streaming tar container for bundling files/directories ahead of a codec
tar = "0.4"

# --- Compression codecs ---
# gzip / DEFLATE (pure Rust)
flate2 = "1"
# Zstandard: the speed/ratio sweet spot, with multithreaded encoding
zstd = { version = "0.13", features = ["zstdmt"] }
# LZ4: fastest throughput. Drop the "safe" features for the faster unsafe code path.
lz4_flex = { version = "0.11", default-features = false, features = ["frame", "std"] }
# xz / LZMA: high ratio
xz2 = "0.1"
# bzip2: common legacy format
bzip2 = "0.4"
# brotli: web-standard codec (pure Rust)
brotli = "7"

# --- Encryption for sealed .abyss archives (pure Rust, audited primitives) ---
# AEAD stream cipher: fast in software, no AES hardware required.
chacha20poly1305 = { version = "0.10", features = ["stream"] }
# Memory-hard password-based key derivation.
argon2 = "0.5"
# OS randomness for per-archive salts and nonces.
rand = "0.8"
# Wipe derived keys from memory on drop.
zeroize = "1"
# --- Foreign formats: read-only. We list/browse/extract these, but the surface
#     keeps the right to forge them, so none can be created. ---
# 7-Zip (.7z): pure Rust, with the common 7z codecs (lzma/lzma2/bzip2/ppmd) and
# AES-256 for reading encrypted archives.
sevenz-rust2 = "0.21"
# RAR (.rar): bindings over the official unrar C source. Read-only by nature —
# RAR creation is proprietary. Compiles the bundled C through the system toolchain.
unrar = "0.5"
# ISO-9660 (.iso) disc images. Pure Rust (its FUSE binding is a dev-dependency
# only, so nothing platform-specific reaches our build) — we only ever read.
iso9660 = "0.1"
